--- a/icon .html
+++ b/icon .html
@@ -1,224 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    .search-container {
-      display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      overflow: hidden;
-      width: 300px; /* Adjust the width as needed */
-    }
-    .search-icon {
-      font-family: FontAwesome !important;
-    }
-    .dropdown-icon,
-    .search-icon {
-      padding: 0 10px;
-      cursor: pointer;
-    }
-    .dropdown-icon {
-      border-right: 1px solid #ccc;
-    }
-    .search-input {
-      border: none;
-      padding: 10px;
-      outline: none;
-      flex-grow: 1;
-      width: 100%; /* Take up remaining space */
-    }
-    #checkboxContainer {
-      display: none;
-      position: absolute;
-      background-color: white;
-      border: 1px solid darkblue;
-      border-radius: 5px;
-      padding: 10px;
-      z-index: 1000;
-    }
-    .checkbox-label {
-      display: flex;
-      align-items: center;
-    }
-    .checkbox-label input {
-      margin-right: 5px;
-    }
-    .checkbox-label input:checked {
-      border: 1px solid darkblue;
-    }
-    .autocomplete-suggestions {
-      position: absolute;
-      background-color: white;
-      border: 1px solid #ccc;
-      z-index: 1000;
-    }
-    .autocomplete-items {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-    .autocomplete-items li {
-      padding: 10px;
-      cursor: pointer;
-    }
-    .autocomplete-active {
-      background-color: #d4d4d4;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Search Bar Example</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa; /* Light grey background */
+        }
+
+        .container {
+            margin-top: 50px;
+        }
+
+        .input-group {
+            max-width: 600px; /* Maximum width for the entire input group */
+            margin: 0 auto; /* Center align the input group */
+        }
+
+        .input-group .btn {
+            width: 40px; /* Fixed width for buttons */
+        }
+
+        .input-group .form-control {
+            border-radius: 0; /* Remove border-radius from input */
+        }
+    </style>
 </head>
 <body>
-  <div class="search-container">
-    <div class="dropdown-icon" id="dropdownIcon">▼</div>
-    <input type="text" class="search-input" id="searchInputDashboard" placeholder="Search">
-    <div id="autocompleteSuggestions" class="autocomplete-suggestions"></div>
-    <div class="search-icon">&#xf002</div>
-  </div>
-  <div id="checkboxContainer"></div>
+    <div class="container mt-3">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+            </div>
+            <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
+                <input type="text" class="form-control" placeholder="Search.." name="search2">
+                <button type="submit" class="btn btn-outline-secondary"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
+    </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', (event) => {
-      var columns = { "All": "All","Haveli": "Haveli", "Mawal": "Mawal", "Bhor": "Bhor", "Purandar": "Purandar", "Mulshi": "Mulshi", "Khed": "Khed", "Shirur": "Shirur" };
-      var checkboxContainer = document.getElementById("checkboxContainer");
-      var dropdownIcon = document.getElementById("dropdownIcon");
-      var searchInput = document.getElementById("searchInputDashboard");
-      var autocompleteSuggestions = document.getElementById("autocompleteSuggestions");
-
-      // Function to populate checkboxes
-      function populateCheckboxes() {
-        checkboxContainer.innerHTML = ''; // Clear existing checkboxes
-
-        for (var key in columns) {
-          if (columns.hasOwnProperty(key)) {
-            var label = document.createElement("label");
-            label.className = 'checkbox-label';
-            var checkbox = document.createElement("input");
-            checkbox.type = "checkbox";
-            checkbox.name = "columns";
-            checkbox.value = key;
-            label.appendChild(checkbox);
-            label.appendChild(document.createTextNode(columns[key]));
-            checkboxContainer.appendChild(label);
-            checkboxContainer.appendChild(document.createElement("br"));
-
-            // Event listener for checkbox change
-            checkbox.addEventListener('change', function(event) {
-              var selectedCheckboxes = Array.from(document.querySelectorAll('input[name="columns"]:checked'))
-                                        .map(checkbox => checkbox.value);
-
-              if (selectedCheckboxes.length > 0) {
-                selectedValue = selectedCheckboxes[0];
-                searchInput.placeholder = "Search " + columns[selectedValue];
-                fetchData(selectedValue);
-                checkboxContainer.style.display = "none"; // Hide checkbox container
-              
-              } else {
-                selectedValue = ""; // No checkbox selected
-                searchInput.placeholder = "Search";
-                autocompleteSuggestions.innerHTML = ''; // Clear suggestions
-              }
-            });
-          }
-        }
-      }
-
-      // Event listener for dropdown icon click
-      dropdownIcon.addEventListener("click", function() {
-        checkboxContainer.style.display = checkboxContainer.style.display === "none" ? "block" : "none";
-        if (checkboxContainer.style.display === "block") {
-          populateCheckboxes();
-        }
-      });
-
-      // Initialize selected value variable
-      let selectedValue = "";
-      // Set default placeholder in search input
-      searchInput.placeholder = "Search";
-
-      // Function to fetch data based on selected column
-      function fetchData(selectedValue) {
-        var geoServerURL = `${main_url}pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=IWMS_line,IWMS_point,IWMS_polygon&propertyName=${selectedValue}&outputFormat=application/json`;
-
-        fetch(geoServerURL)
-          .then(response => response.json())
-          .then(data => {
-            var suggestions = [];
-
-            data.features.forEach(feature => {
-              var value = feature.properties[selectedValue];
-              suggestions.push(value);
-            });
-
-            // Display suggestions in autocompleteSuggestions div
-            displaySuggestions(suggestions);
-          })
-          .catch(error => {
-            console.error('Error fetching data:', error);
-          });
-      }
-
-      // Function to display suggestions in autocompleteSuggestions div
-      function displaySuggestions(suggestions) {
-        autocompleteSuggestions.innerHTML = ''; // Clear previous suggestions
-
-        var list = document.createElement("ul");
-        list.setAttribute("id", "autocomplete-list");
-        list.setAttribute("class", "autocomplete-items");
-        autocompleteSuggestions.appendChild(list);
-
-        suggestions.forEach(suggestion => {
-          var item = document.createElement("li");
-          item.textContent = suggestion;
-          item.addEventListener("click", function() {
-            searchInput.value = suggestion;
-            closeAllLists();
-          });
-          list.appendChild(item);
-        });
-      }
-
-      // Autocomplete functionality
-      searchInput.addEventListener("input", function() {
-        var inputText = this.value.trim().toLowerCase();
-
-        if (!inputText) {
-          autocompleteSuggestions.innerHTML = '';
-          return;
-        }
-
-        var filteredSuggestions = []; // Filter suggestions based on inputText
-
-        // Example filtering based on the current implementation
-        var suggestions = autocompleteSuggestions.getElementsByTagName("li");
-        for (var i = 0; i < suggestions.length; i++) {
-          var suggestion = suggestions[i].textContent.toLowerCase();
-          if (suggestion.includes(inputText)) {
-            filteredSuggestions.push(suggestion);
-          }
-        }
-
-        displaySuggestions(filteredSuggestions);
-      });
-
-      // Function to close all suggestion lists
-      function closeAllLists() {
-        var suggestions = document.getElementsByClassName("autocomplete-items");
-        for (var i = 0; i < suggestions.length; i++) {
-          suggestions[i].parentNode.removeChild(suggestions[i]);
-        }
-      }
-
-      // Close suggestions on document click outside of autocomplete suggestions
-      document.addEventListener("click", function(event) {
-        if (event.target !== searchInput) {
-          closeAllLists();
-        }
-      });
-
-    });
-  </script>
+    <!-- jQuery and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
