--- a/Environtment.html
+++ b/Environtment.html
@@ -394,14 +394,14 @@
         left: 7.5%;
         transform: translateX(-50%);
         background-color: white;
-        border: 2px solid darkblue;
+        border: 1px solid black;
         border-radius: 5px;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 35px;
-        height: 35px;
+        width: 32px;
+        height: 32px;
         z-index: 1000;
         padding: 10px;
       }
@@ -469,15 +469,14 @@
 @media only screen and (min-width: 1440px) {
   #helpButton {
     top: 15%;
-    left: 2.100%;
+    left: 1.5%;
   }
   
   #helpButton:hover::after {
-    top:2%; 
-    left: 170%; 
+    top: 15%;
+    left: 1.5%;
   }
 }
-
     </style>
     <!-- bootstrap -->
     <link
@@ -679,11 +678,6 @@ var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.
 e.containerPoint.x
 )}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x}&HEIGHT=${size.y}&BBOX=${bbox}`;
 
-var url =  baseUrl + `?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
-  e.containerPoint.x
-)}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${
-  size.x
-}&HEIGHT=${size.y}&BBOX=${bbox}`;
 
 
             fetch(url)
@@ -1086,6 +1080,17 @@ document.getElementById("editFeatureButton").addEventListener("click", function 
       // added for on click of button only saleection edit vertices will work
 
       // Add click event listeners to the buttons
+      document
+        .getElementById("drawButton")
+        .addEventListener("click", function () {
+          this.style.backgroundColor = "#ccc"; // Change background color when clicked
+        });
+
+      document
+        .getElementById("editButton")
+        .addEventListener("click", function () {
+          this.style.backgroundColor = "#ccc"; // Change background color when clicked
+        });
 
       // GeoServer URL
       var geoserverUrl = "https://iwmsgis.pmc.gov.in/geoserver";
@@ -1261,7 +1266,7 @@ document.getElementById("editFeatureButton").addEventListener("click", function 
 
         // Fetch capabilities to get all layers in the 'pmc' workspace
         fetch(
-           geoserverUrl + "/ows?service=wms&version=1.3.0&request=GetCapabilities"
+          "https://iwmsgis.pmc.gov.in/geoserver/ows?service=wms&version=1.3.0&request=GetCapabilities"
         )
           .then((response) => response.text())
           .then((data) => {
