--- a/electric-work.html
+++ b/electric-work.html
@@ -457,30 +457,28 @@
   }
   
   #helpButton {
-    position: absolute;
-    top: 15%;
-    left: 2.1%;
-    transform: translateX(-50%);
-    background-color: white;
-    border: 2px solid darkblue;
-    border-radius: 5px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 35px;
-    height: 35px;
-    z-index: 1000;
-    padding: 10px; 
-}
-
+      position: absolute;
+      top: 15%;
+      left: 1.5%;
+      transform: translateX(-50%);
+      background-color: white;
+      border: 1px solid black;
+      border-radius: 5px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 28px;
+      height: 28px;
+      z-index: 1000;
+      padding: 10px; 
+  }
   
   #helpButton:hover::after {
       content: "HELP"; 
       position: absolute;
-      top:2%; 
-      left: 170%; 
-
+      top: calc(100% + 5px); 
+      left: 50%; 
       transform: translateX(-50%);
       background-color: black;
       color: white;
@@ -746,11 +744,6 @@ var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.
 e.containerPoint.x
 )}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x}&HEIGHT=${size.y}&BBOX=${bbox}`;
 
-var url =  baseUrl + `?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
-  e.containerPoint.x
-)}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${
-  size.x
-}&HEIGHT=${size.y}&BBOX=${bbox}`;
 
 
             fetch(url)
@@ -1173,6 +1166,19 @@ document.getElementById("editFeatureButton").addEventListener("click", function 
 
       // added for on click of button only saleection edit vertices will work
 
+      // Add click event listeners to the buttons
+      document
+        .getElementById("drawButton")
+        .addEventListener("click", function () {
+          this.style.backgroundColor = "#ccc"; // Change background color when clicked
+        });
+
+      document
+        .getElementById("editButton")
+        .addEventListener("click", function () {
+          this.style.backgroundColor = "#ccc"; // Change background color when clicked
+        });
+
       // GeoServer URL
       var geoserverUrl = "https://iwmsgis.pmc.gov.in/geoserver";
 
@@ -1347,7 +1353,7 @@ document.getElementById("editFeatureButton").addEventListener("click", function 
 
         // Fetch capabilities to get all layers in the 'pmc' workspace
         fetch(
-           geoserverUrl + "/ows?service=wms&version=1.3.0&request=GetCapabilities"
+          "https://iwmsgis.pmc.gov.in/geoserver/ows?service=wms&version=1.3.0&request=GetCapabilities"
         )
           .then((response) => response.text())
           .then((data) => {
