--- a/gardenhoriculture.html
+++ b/gardenhoriculture.html
@@ -14,7 +14,7 @@
 			border-bottom: 2px solid #2b13bb;
 			border-top: 2px solid #2b13bb;
 			border-radius: 5px 5px 5px 5px;
-          background-color: green;
+      background-color: green;
 			position: fixed;
 			color: black;
 			padding: 0px 5px;
@@ -397,14 +397,14 @@
         left: 7.5%;
         transform: translateX(-50%);
         background-color: white;
-        border: 2px solid darkblue;
+        border: 1px solid black;
         border-radius: 5px;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 35px;
-        height: 35px;
+        width: 32px;
+        height: 32px;
         z-index: 1000;
         padding: 10px;
       }
@@ -472,12 +472,12 @@
 @media only screen and (min-width: 1440px) {
   #helpButton {
     top: 15%;
-    left: 2.100%;
+    left: 1.5%;
   }
   
   #helpButton:hover::after {
-    top:2%; 
-    left: 170%; 
+    top: 15%;
+    left: 1.5%;
   }
 }
 		</style>
@@ -935,6 +935,13 @@
 		// added for on click of button only saleection edit vertices will work
 
 		// Add click event listeners to the buttons
+		document.getElementById('drawButton').addEventListener('click', function () {
+			this.style.backgroundColor = '#ccc'; // Change background color when clicked
+		});
+
+		document.getElementById('editButton').addEventListener('click', function () {
+			this.style.backgroundColor = '#ccc'; // Change background color when clicked
+		});
 
 				// Customize the zoom control position
 		map.zoomControl.setPosition('bottomright');
