--- a/index.html
+++ b/index.html
@@ -587,6 +587,18 @@ function toggleSelectLayerButton(show) {
 
       // added for on click of button only saleection edit vertices will work
 
+      // Add click event listeners to the buttons
+      document
+        .getElementById("drawButton")
+        .addEventListener("click", function () {
+          this.style.backgroundColor = "#ccc"; // Change background color when clicked
+        });
+
+      document
+        .getElementById("editButton")
+        .addEventListener("click", function () {
+          this.style.backgroundColor = "#ccc"; // Change background color when clicked
+        });
 
       // GeoServer URL
       var geoserverUrl = "https://iwmsgis.pmc.gov.in/geoserver";
@@ -762,7 +774,7 @@ function toggleSelectLayerButton(show) {
 
         // Fetch capabilities to get all layers in the 'pmc' workspace
         fetch(
-           geoserverUrl + "/ows?service=wms&version=1.3.0&request=GetCapabilities"
+          "https://iwmsgis.pmc.gov.in/geoserver/ows?service=wms&version=1.3.0&request=GetCapabilities"
         )
           .then((response) => response.text())
           .then((data) => {
