--- a/building.html
+++ b/building.html
@@ -616,18 +616,19 @@
     <div>
       <img src="png/pmcjpeg.png" alt="" class="logopng1" />
     </div>
-
     <div id="table-container">
+      <button id="toggle-btn"><img src="png/dtabasetable.png"  alt="" class="tablebtn">></button>
       <table
         id="workTable"
         class="table table-bordered table-hover"
-        style="width: 100% !important; font-size: 10px"
-      >
+        style="width: 100% !important; font-size: 10px">
         <thead></thead>
 
         <tbody id="workTableData"></tbody>
       </table>
     </div>
+
+
 
     <button id="helpButton" onclick="openHelpPage()">
       <i class="fas fa-question icon"></i>
@@ -1053,9 +1054,46 @@
     </script>
 
     <script>
-      function openHelpPage() {
-        window.open("building_help.html", "_blank");
-      }
+    $(document).ready(function() {
+    // Initially hide the toggle button
+    $("#toggle-btn").hide();
+
+    // Function to toggle between minimized and maximized states
+    $("#toggle-btn").click(function() {
+        $("#table-container").toggleClass("minimized");
+        if ($("#table-container").hasClass("minimized")) {
+            $("#toggle-btn").html('<img src="png/dtabasetable.png" alt="" class="tablebtn" />');
+        } else {
+            $("#toggle-btn").html('<i class="fas fa-minus"></i>'); // Use minus icon when maximized
+        }
+    });
+
+    // Function to show the table container with the toggle button
+    function showTableContainer() {
+        $("#table-container").show().addClass("show");
+        $("#toggle-btn").show().html('<i class="fas fa-minus"></i>'); // Set to minus icon initially
+    }
+
+    // Simulate dynamic data loading and show the table container
+    setTimeout(function() {
+        let formDataFromStorage = {}; // Your dynamic data here
+        let contentData = "";
+        for (const property in formDataFromStorage) {
+            contentData += `<tr><th>${property}</th><td>${formDataFromStorage[property]}</td></tr>`;
+        }
+        $("#workTableData").html(contentData);
+
+        // Show the table container with the default PNG icon
+        $("#table-container").show().addClass("show");
+        $("#toggle-btn").show().html('<img src="png/dtabasetable.png" alt="" class="tablebtn" />');
+
+        // Change to the minus icon after a short delay to ensure the table is visible
+        setTimeout(function() {
+            $("#toggle-btn").html('<i class="fas fa-minus"></i>');
+        }, 100); // Adjust the delay as needed
+    }, 1000);
+});
+
     </script>
   </body>
 </html>
