add cluster data

--- a/dashboard.html
+++ b/dashboard.html
@@ -61,6 +61,7 @@ background-size: 175% 175%;
 }
 
 
+
 .cluster-text {
   /* Styles for the text inside the cluster */
   display: flex;
@@ -69,7 +70,7 @@ background-size: 175% 175%;
   text-align: center;
 color: #fff;
 /* text-shadow: 2px 2px 4px darkblue; */
-  font-size: 14px; /* Default font size */
+  font-size: 10px; /* Default font size */
   /* border-radius: 4px; */
 /* background: rgba(255, 255, 255, 0.20);
 box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
@@ -189,11 +190,14 @@ backdrop-filter: blur(2px); */
 
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
-    <script src="js/mainmodal/mapLayer.js"></script>
+    
     <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
     <script src="https://unpkg.com/@turf/turf"></script>
+    <script src="js/cluster.js"></script>
+
     <script src="js/dashboard.js"></script>
     <script src="js/mainmodal/legend.js"></script>
+    <script src="js/mainmodal/mapLayer.js"></script>
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
 
 </body>
