--- a/dashboard.html
+++ b/dashboard.html
@@ -76,6 +76,40 @@ color: #fff;
 box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
 backdrop-filter: blur(2px); */
 }
+
+
+.cluster_legend {
+    /* font-family: Arial, sans-serif; */
+    font-size: 14px;
+    background: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    POSITION: absolute;
+    bottom: 122px;
+    z-index: 999;
+    left: 10px;
+    height: 300px;
+    overflow-y: scroll; 
+    scrollbar-width: thin;
+}
+        .cluster_legend-title {
+            font-size: 16px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .cluster_legend-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+        }
+        .cluster_legend-color {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            border-radius: 3px;
+        }
   
 </style>
 <body>
@@ -161,6 +195,9 @@ backdrop-filter: blur(2px); */
         </div>
         
       </div>
+      <div id="cluster_legend" class="cluster_legend">
+        <div class="cluster_legend-title">Cluster Legend</div>
+    </div>
 
       <div id="tablecontainer"></div>
       <div id="pagination"></div>
@@ -194,10 +231,11 @@ backdrop-filter: blur(2px); */
     <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
     <script src="https://unpkg.com/@turf/turf"></script>
     <script src="js/cluster.js"></script>
-
-    <script src="js/dashboard.js"></script>
-    <script src="js/mainmodal/legend.js"></script>
     <script src="js/mainmodal/mapLayer.js"></script>
+    <script src="js/dashboard.js"></script>
+  
+   
+    <script src="js/mainmodal/legend.js"></script>
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
 
 </body>
