--- a/dashboard.html
+++ b/dashboard.html
@@ -68,7 +68,7 @@ background-size: 175% 175%;
   justify-content: center;
   align-items: center;
   text-align: center;
-color: #fff;
+color: white;
 /* text-shadow: 2px 2px 4px darkblue; */
   font-size: 10px; /* Default font size */
   /* border-radius: 4px; */
