add old dashboard and in new dashboard add cluster

--- a/newDashboard.html
+++ b/newDashboard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PMC</title>
-  <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="css/newdashboard.css">
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   
  
@@ -38,7 +38,7 @@
 /* cluster */
 .bufferColor {
   /* background-color: #0876ff69; */
-  padding: 10px;
+  padding: 5px;
   border-radius: 50%;
   text-align: center;
   font-weight: bold;
@@ -232,7 +232,7 @@ backdrop-filter: blur(2px); */
     <script src="https://unpkg.com/@turf/turf"></script>
     <script src="js/cluster.js"></script>
     <script src="js/mainmodal/mapLayer.js"></script>
-    <script src="js/dashboard.js"></script>
+    <script src="js/newDashboard.js"></script>
   
    
     <script src="js/mainmodal/legend.js"></script>
