--- a/geometry_page.html
+++ b/geometry_page.html
@@ -148,6 +148,9 @@
             left: 19px;
             top: 30vh;
         }
+        #workIDInfo{
+            display: none;
+        }
     </style>
 
 </head>
