--- a/building.html
+++ b/building.html
@@ -605,10 +605,13 @@
     <link role="stylesheet"  href="cdn1/themes.css">
 
     <script src="libs/Leaflet.MousePosition-master/src/L.Control.MousePosition.js"></script>
-    <link
+    
+    <!-- <link
       rel="stylesheet"
       href="libs/Leaflet.MousePosition-master/src/L.Control.MousePosition.css"
-    />
+    /> -->
+    <link role="stylesheet"  href="cdn/css/mouseposition.css">
+
 
     <!-- <link rel="stylesheet" href="libs/polyline-measure/line-measure.css" /> -->
     <link role="stylesheet"  href="cdn1/line-measure.css">
@@ -619,8 +622,7 @@
       rel="stylesheet"
       href="libs/leaflet-measure-master/leaflet-measure.css"
     /> -->
-
-    <link rel="stylesheet"  href="cdn1/leaflet-measure.css">
+   <link rel="stylesheet"  href="cdn1/leaflet-measure.css">
 
 
     <script src="libs/leaflet-measure-master/leaflet-measure.js"></script>
