--- a/dashboard.html
+++ b/dashboard.html
@@ -217,7 +217,7 @@ backdrop-filter: blur(2px); */
     <!-- Include daterangepicker JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css"d
       integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
       <link rel="stylesheet" href="cdn/css/select2 4.0.13.css">
