ui change for table

--- a/dashboard.html
+++ b/dashboard.html
@@ -141,7 +141,7 @@ backdrop-filter: blur(2px); */
           </select>
 
           <input class="form-contro ms-2" type="" placeholder="Search Work ID" aria-label="Search"
-            id="searchInputDashboard" style=" border: 2px solid darkblue;" />
+            id="searchInputDashboard" style="" />
           <div id="autocompleteSuggestions" class="autocomplete-suggestions"></div>
 
         </button>
