--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PMC</title>
-  <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="css/newdashboard.css">
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   
  
