--- a/geometry.html
+++ b/geometry.html
@@ -128,9 +128,9 @@
             margin-right: 10px;
         }
 
-        .leaflet-interactive {
+        /* .leaflet-interactive {
             transform: scale(1.2);
-        }
+        } */
     </style>
 
 
