add panoramic image

--- a/dashboard.html
+++ b/dashboard.html
@@ -67,7 +67,10 @@
   <!-- <link rel="stylesheet" href="cdn/css/font_awesome6.0.0-beta3.css"> -->
 
   <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" /> -->
-  
+   <!-- Pannellum CSS -->
+<!-- <link rel="stylesheet" href="https://unpkg.com/pannellum@2.5.6/build/pannellum.css"/> -->
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.4.0/pannellum.css" />
 </head>
 <style>
   
@@ -213,6 +216,8 @@ color: #fff;
     <!-- <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="cdn/css/select2.css">
 
+    <!-- <script src="https://unpkg.com/pannellum@2.5.6/build/pannellum.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.4.0/pannellum.js"></script>
 
 
     
